syntax = "proto3";

option csharp_namespace = "Otus.Teaching.PromoCodeFactory.WebHost.GrpcService";

message PreferenceResponse {
	string id = 1;
	string name = 2;
} 

message CustomerShortResponse {
	string id = 1;
	string first_name = 2;
	string last_name = 3;
	string email = 4;
}

message PromoCodeShortResponse {
	string id = 1;
    string code = 2;
    string service_info = 3;
    string begin_date = 4;
	string end_date = 5;
    string partner_name = 6;
}

service CustomerGrpcService {
	rpc GetCustomers(GetCustomersRequest) returns (GetCustomersResponse);
	rpc GetCustomer(GetCustomerRequest) returns (GetCustomerResponse);
	rpc CreateCustomer(CreateCustomerRequest) returns (GetCustomerResponse);
	rpc EditCustomersAsync(EditCustomerRequest) returns (CreateOrEditCustomerResponse);
	rpc DeleteCustomer(DeleteCustomerRequest) returns (CreateOrEditCustomerResponse);
}

message GetCustomersRequest {}

message GetCustomersResponse {
	repeated CustomerShortResponse customers = 1;   
}

message GetCustomerRequest {
	string id = 1;
}

message GetCustomerResponse {
	string id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
	repeated PreferenceResponse preferences = 5;
	repeated PromoCodeShortResponse promo_codes = 6;
}

message CreateCustomerRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
	repeated string PreferenceIds = 4;
}

message EditCustomerRequest {
	string id = 1;
	CreateCustomerRequest request = 2;
}

message CreateOrEditCustomerResponse {
	string result = 1;
}

message DeleteCustomerRequest {
	string id = 1;
}